# goob2

./: .clang-format  CMakeLists.txt  README.md
include/: goob.hpp
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  goob.cpp
src/color/: CMakeLists.txt  color.hpp
src/image/: CMakeLists.txt  error_list.txt  tga_factory.cpp  tga_factory.hpp  tga_image.cpp  tga_image.hpp  tga_image_impl.cpp  tga_image_impl.hpp
src/renderer/: CMakeLists.txt  goob.cpp  goob.hpp
src/utils/: CMakeLists.txt  utils.hpp
src/vector/: CMakeLists.txt  vector.hpp
test/: CMakeLists.txt
test/image/: CMakeLists.txt  test_tga_image.cpp
test/renderer/: CMakeLists.txt  test_goob.cpp
